# alphacar

./: README.md  webcam_chess.py
ksj/ros2_workspace/: tree.txt
kyg/: README.md  client.py  server.py
kyg/v2x/: emit_event.py  make_clip.py  watch_and_broadcast.py
kyg/진행 상황/: #0 목표 그림 한 줄 요약.txt  #1 스모크 테스트.txt  #2 주소 그룹 고정, HMAC 켜기.txt  #3 systemd 자동 실행 or 파일워처클립 추출 연동.txt  #4 감지 이벤트 ↔ 브로드캐스트 ↔ (전후 5분) 영상 저장.txt  #5 차량 반응(ROS2) 연결(ROS2 없어서 안함).txt  #5 차량 반응(ROS2) 연결(ROS2 없어서 안함)2.txt  #6 클라이언트 “중복 억제 + 레이트 리밋 + 상태 변화만 출력”.txt  #6 클라이언트 “중복 억제 + 레이트 리밋 + 상태 변화만 출력”2.txt  #7 테스트 시나리오.txt  #8 DB 인덱스 → 테스트 자동화.txt  #8 DB 인덱스 → 테스트 자동화2.txt  #8 DB 인덱스 → 테스트 자동화3.txt  #8 DB 인덱스 → 테스트 자동화4.txt  #8 DB 인덱스 → 테스트 자동화5.txt  만들어야 할 것 리스트.txt  지금까지 만든 것 적용한 것 리스트.txt
pred_danger/: main.py  main_ex.py  test_pipeline.py
pred_danger/.ipynb_checkpoints/: k_fold-checkpoint.py  main-checkpoint.py  main_ex-checkpoint.py  pre_data_yolo-checkpoint.py  test_pipeline-checkpoint.py
pred_danger/k_fold/: cv_performance_summary_front_classification.csv  cv_performance_summary_rear_classification.csv
pred_danger/test/: test4.webm
ros2_fin/: Dockerfile
ros2_fin/car_control/: setup.cfg  setup.py
stm_code/: 1019_446.ioc
v2x_server/: app.py  carla_with_flask.py  carla_with_flask_backup.py  db_index.py  emit_event.py  heartbeat_tx.py  install_server.sh  make_clip.py  model1.xml  model2.xml  run_all.sh  scenario_collision_mix.sh  self_test.sh  server.env  server.py  spawn_car.py  status_server.py  streamlit_app.py  v2x_db_cli.py  v2x_index.sqlite3  watch_and_broadcast.py  실행법
(+1106 files in other folders)
