[develop]
script_dir=$base/lib/car_control

[install]
install_scripts=$base/lib/car_control

[metadata]
name = car_control
version = 0.1.0

[options]
packages = find:
install_requires =
    rclpy
    std_msgs
    geometry_msgs
    car_msgs

[options.entry_points]
console_scripts =
    motor_controller_node = car_control.motor_controller_node:main
